# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
#

2005-10-26 18:17:58 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-45

    Summary:
      resources, fix Zope 2 resources
    Revision:
      itools--main--0.11--patch-45

    Use a single connection for all Zope 2 resources, this connection is
    not shared with the Zope pool of connections, it is only for us.

    modified files:
     Changelog handlers/transactions.py resources/zope2.py


2005-10-26 16:06:37 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-44

    Summary:
      uri, reverte change, "str(path)" returns '.' again (#30)
    Revision:
      itools--main--0.11--patch-44

    It broke ikaaro.

    modified files:
     Changelog uri/generic.py


2005-10-25 15:45:07 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-43

    Summary:
      merge unit test fixes from herve
    Revision:
      itools--main--0.11--patch-43

    Patches applied:
    
     * herve@oursours.net--public/itools--uripath--0.11--patch-13
       fix misleading variable names.
    
     * herve@oursours.net--public/itools--uripath--0.11--patch-14
       a path is not the same with a trailing slash.
    

    modified files:
     Changelog uri/test_path.py

    new patches:
     herve@oursours.net--public/itools--uripath--0.11--patch-13
     herve@oursours.net--public/itools--uripath--0.11--patch-14


2005-10-25 15:34:03 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-42

    Summary:
      start CHANGES file for the 0.11.0 release
    Revision:
      itools--main--0.11--patch-42


    modified files:
     CHANGES.txt Changelog


2005-10-25 14:12:02 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-41

    Summary:
      uri, change "str(path)" to return the empty string (#30)
    Revision:
      itools--main--0.11--patch-41


    modified files:
     Changelog uri/generic.py


2005-10-25 13:31:23 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-40

    Summary: