@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
 #
 
+2005-10-26 19:15:12 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-46
+
+    Summary:
+      gettext, fix "PO.to_str" (return a byte string)
+    Revision:
+      itools--main--0.11--patch-46
+
+
+    modified files:
+     Changelog gettext/PO.py
+
+
 2005-10-26 18:17:58 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-45
 
     Summary:
